--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
     <title>Ecomerce Website</title>
@@ -17,7 +17,7 @@
   <body>
     <!------Navbar ------->
     <nav class="navbar navbar-expand-sm navbar-dark bg-success">
-      <div class="container-fluid">
+      <div class="container">
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
@@ -35,23 +35,15 @@
             <li class="nav-item">
               <a class="nav-link" href="javascript:void(0)">Contact</a>
             </li>
-            <a class="navbar-brand" href="javascript:void(0)">
+          </ul>
+            <a class="navbar-brand mx-auto" href="javascript:void(0)">
               <img
                 src="images/waqeya.webp"
                 alt=""
                 class="img-fluid"
-                style="height: 30px"
+                style="height: 50px"  
               />
             </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#mynavbar"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </ul>
           <form class="d-flex">
             <input class="form-control me-2" type="text" placeholder="Search" />
             <button class="btn btn-success" type="button">Search</button>
@@ -63,6 +55,7 @@
 
     <!-----Carousel ------->
     <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="container">
       <div class="carousel-indicators">
         <button
           type="button"
@@ -115,6 +108,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    </div>
     <!-----End Carousel ------->
     <!----- Card Item ------->
     <div class="container my-5">
@@ -123,7 +117,7 @@
         <h3>Hijab & Niqab Set</h3>
       </div>
       <div class="row">
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -156,7 +150,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -189,7 +183,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -222,7 +216,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -255,7 +249,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -288,7 +282,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -321,7 +315,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -354,7 +348,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -387,7 +381,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -420,7 +414,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -453,7 +447,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -466,7 +460,7 @@
             />
 
             <div class="mt-3">
-              <div class="rating mb-2">★ 0.0 / 5</div>
+              <div class="rating mb-2">★ 0.0/5</div>
 
               <div class="sold-count mb-2">13 Sold</div>
 
@@ -486,7 +480,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-2 mt-4">
           <div class="product-card p-3" style="width: 10rem">
             <!-- Badges -->
             <div class="badge-discount">14% Off</div>
@@ -1259,13 +1253,80 @@
 
     <!-----End third  Card Item ------->
     <!----Footer ------->
-    <div class="container my-5">
-    <div class="footer my-5">
-        
-    </div>
-    </div>
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="images/waqeya.webp" alt="" />
+            <p>
+              WAQEYA.COM একটি ট্রাস্টেড ও কোয়ালিটি-ফোকাস অনলাইন ওয়াচ এবং বিভিন্ন
+              চাইনিজ ফ্যাশন গেজেট কিডস টয় বেবি কেয়ার আইটেম ইত্যাদি প্রোডাক্ট
+              স্টোর। আমাদের কাছ থেকে কেনাকাটা করার আগে নিচের নীতিমালাগুলো
+              ভালোভাবে পড়ে নিন।
+            </p>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-solid fa-message"></i>
+          </div>
 
+          <div class="col-md-3">
+            <h6 class="fw-bold">Contact Us</h6>
+            <p><i class="fa-solid fa-phone me-2"></i> 01326870225</p>
+            <p>
+              <i class="fa-solid fa-envelope me-2"></i> waqeyashop@gmail.com
+            </p>
+            <p>
+              <i class="fa-solid fa-location-dot me-2"></i> Mirpur -2 Dhaka,
+              Bangladesh
+            </p>
+            <p>
+              <i class="fa-brands fa-whatsapp text-success me-2"></i> WhatsApp
+              Us
+            </p>
+          </div>
 
+          <div class="col-md-3">
+            <h6 class="fw-bold">Quick Links</h6>
+            <button class="btn btn-dark">Order Tracking</button>
+           <div class="link">
+             <p><a href="#"></a>Shipping Policy</p>
+            <p><a href="#"></a>Returns & Refunds Policy</p>
+            <p><a href="#"></a>Warranty Policy</p>
+            <p><a href="#"></a>Order Policy</p>
+            <p><a href="#"></a>Our Mission</p>
+            <p><a href="#"></a>Our Vision</p>
+            <p><a href="#"></a>Privacy & Policy</p>
+            <p><a href="#"></a>Terms & Conditions</p>
+           </div>
+
+            <!-- <ul>
+              <li><a href="#"></a>Shipping Policy</li>
+              <li><a href="#"></a>Returns & Refunds Policy</li>
+              <li><a href="#"></a>Warranty Policy</li>
+              <li><a href="#"></a>Order Policy</li>
+              <li><a href="#"></a>Our Mission</li>
+              <li><a href="#"></a>Our Vision</li>
+              <li><a href="#"></a>Privacy & Policy</li>
+              <li><a href="#"></a>Terms & Conditions</li>
+            </ul> -->
+          </div>
+
+          <div class="col-md-2">
+            <h6 class="fw-bold">Let's Connect</h6>
+            <a href="#" class="btn btn-dark">Join Our Facebook</a>
+            <div class="mt-3">
+              <div>
+                <img src="images/imgw.jpg" alt="" />
+
+                <p>WAQEYA</p>
+              </div>
+              <a href="#" class="btn btn-outline-success"
+                ><i class="fa-brands fa-facebook"></i>Follow Page</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-----End Footer------->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
