--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
- 
+
     <link rel="stylesheet" href="style.css" />
     <title>Ecomerce Website</title>
   </head>
@@ -1277,7 +1277,9 @@
     <div class="header my-5">
         <h3>Top Brand</h3>
       </div>
-    
+    <!-- Swiper -->
+
+  
 
   </div>
     <!-----End Top Brand section ------->
@@ -1364,6 +1366,8 @@
         </div>
     </div>
     <!-----End Footer------->
+
+
 
 
 
