--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav fs-5 me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">All Product</a>
+              <a class="nav-link" href="allproduct.html">All Product</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">Blog</a>
+              <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">Contact</a>
+              <a class="nav-link" href="contactus.html">Contact</a>
             </li>
           </ul>
 
