--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
 
+
+
     <link rel="stylesheet" href="style.css" />
     <title>Ecomerce Website</title>
   </head>
@@ -56,7 +58,7 @@
               />
             </form>
           </div>
-          <a href="#" class="text-white fs-4 me-3">
+          <a href="shopingcart.html" class="text-white fs-4 me-3">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
           </a>
           <a href="#" class="text-white fs-4">
@@ -1371,6 +1373,11 @@
 
 
 
+
+
+
+    <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
