--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             <p class="price mb-3">
               <span class="original">999 Tk</span>
               <span class="text-success">850 Tk</span>
-              <span class="badge bg-dark text-white">Save 149</span>
+              <span class="badge bg-dark">Save 149</span>
             </p>
 
             <button class="btn btn-order">অর্ডার করুন</button>
@@ -1225,6 +1225,8 @@
     </div>
   </div>
   <!-----End Footer------->
+
+
   <!-- Swiper JS --> 
    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script> 
    <!-- Initialize Swiper --> <script> 
