--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
 
 <body>
   <!------Navbar ------->
+
   <nav class="navbar navbar-expand-sm navbar-dark bg-success">
     <div class="container">
+      <!------humburger Button-->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!------humburger Button-->
+
       <div class="collapse navbar-collapse" id="mynavbar">
         <ul class="navbar-nav fs-5 me-auto">
           <li class="nav-item">
@@ -1103,39 +1110,46 @@
     </div>
     <!-- Swiper -->
     <!-- Swiper main container -->
-    <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <img src="images/sws.webp" />
+    <div class="row">
+      <div class="col-12 col-md-12 mt-4">
+
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="images/sws.webp" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/swf (2).webp" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/swf (2).webp" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/swo.webp" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/swse.webp" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/swth.webp" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/swt.webp" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/swf.webp" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/swo.webp" />
+            </div>
+          </div>
+          <!-- Navigation buttons -->
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
         </div>
-        <div class="swiper-slide">
-          <img src="images/swf (2).webp" />
-        </div>
-        <div class="swiper-slide">
-          <img src="images/swf (2).webp" />
-        </div>
-        <div class="swiper-slide">
-          <img src="images/swo.webp" />
-        </div>
-        <div class="swiper-slide">
-          <img src="images/swse.webp" />
-        </div>
-        <div class="swiper-slide">
-          <img src="images/swth.webp" />
-        </div>
-        <div class="swiper-slide">
-          <img src="images/swt.webp" />
-        </div>
-        <div class="swiper-slide">
-          <img src="images/swf.webp" />
-        </div>
-        <div class="swiper-slide">
-          <img src="images/swo.webp" />
-        </div>
+
+
       </div>
-      <!-- Navigation buttons -->
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
     </div>
 
 
@@ -1227,24 +1241,28 @@
   <!-----End Footer------->
 
 
-  <!-- Swiper JS --> 
-   <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script> 
-   <!-- Initialize Swiper --> <script> 
-   var swiper = new Swiper(".mySwiper",
-    { loop: true, 
-      spaceBetween: 10, 
-      slidesPerView: 8,
-      autoplay: {
-      delay: 1000, 
-      disableOnInteraction: false, 
-    },
-      navigation: { nextEl: ".swiper-button-next",
-      prevEl: ".swiper-button-prev", 
-    }, 
-    }); 
-    </script>
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper(".mySwiper",
+      {
+        loop: true,
+        spaceBetween: 10,
+        slidesPerView: 8,
+        autoplay: {
+          delay: 1000,
+          disableOnInteraction: false,
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      }); 
+  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
