--- a/index.html
+++ b/index.html
@@ -41,17 +41,16 @@
   <!------End Topbar  ------->
   <!------Navbar ------->
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+  <nav class="navbar navbar-expand-xl navbar-dark bg-success">
 
-    <div class="container position-relative">
+    <div class="container">
       <!------humburger Button-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <!------humburger Button-->
-
       <div class="collapse navbar-collapse" id="mynavbar">
-        <ul class="navbar-nav fs-5 me-auto">
+        <ul class="navbar-nav fs-5 mx-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
@@ -60,7 +59,7 @@
               Allproduct
             </a>
             <ul class="dropdown-menu">
-              <li><a class="nav-link" href="allproduct.html">our product</a></li>
+              <li><a class="nav-link" href="allproduct.html">Our product</a></li>
               <li><a class="nav-link" href="#">Womens Fashion's</a></li>
               <li><a class="nav-link" href="#">Mens Fashion's</a></li>
               <li><a class="nav-link" href="#">Kids Watch</a></li>
@@ -81,9 +80,16 @@
             <a class="nav-link" href="contactus.html">Contact</a>
           </li>
         </ul>
+        
       </div>
-       <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+      <div class="logo">
+        <a class="navbar-brandd-flex mx-auto p-3" href="javascript:void(0)">
+            <img src="images/waqeya.webp" alt="" class="img-fluid" style="height: 60px"/>
+        </a>
+      </div>
+      
+       <form class="d-flex" ms-auto role="search">
+          <input class="form-control me-2" type="search" placeholder="Search Here" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
         <a href="shopingcart.html" class="text-white fs-4 me-3">
