--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 
   <!------Topbar ------->
+
   <div class="topbar topbar-one">
     <div class="container">
       <div class="row">
@@ -38,6 +39,7 @@
       </div>
     </div>
   </div>
+
   <!------End Topbar  ------->
   <!------Navbar ------->
 
@@ -87,11 +89,16 @@
             <img src="images/waqeya.webp" alt="" class="img-fluid" style="height: 60px"/>
         </a>
       </div>
-      
-       <form class="d-flex" ms-auto role="search">
+      <div class="search-box me-3">
+          <input type="text" class="from-control" placeholder="Search Here">
+          <button class="search-btn">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </button>
+        </div>
+       <!-- <form class="d-flex" ms-auto role="search">
           <input class="form-control me-2" type="search" placeholder="Search Here" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        </form> -->
         <a href="shopingcart.html" class="text-white fs-4 me-3">
           <i class="fa fa-shopping-cart" aria-hidden="true"></i>
         </a>
@@ -101,9 +108,11 @@
     </div>
     </div>
   </nav>
+  
   <!------End Navbar ------->
 
   <!-----Carousel ------->
+
   <div id="carouselExampleIndicators" class="carousel slide">
     <div class="container rounded mt-2">
       <div class="carousel-indicators">
@@ -137,6 +146,7 @@
       </button>
     </div>
   </div>
+
   <!-----End Carousel ------->
   <!----- Card Item ------->
 
@@ -455,10 +465,9 @@
     </div>
   </div>
 
-
-
   <!----- Card Item ------->
   <!----- Card Item ------->
+
   <div class="container my-5">
     <div class="header my-5">
       <h6>Best Sell</h6>
@@ -781,11 +790,11 @@
       <button class="btn btn-view my-4">View More</button>
     </div>
   </div>
-  </div>
 
   <!----- Card Item ------->
 
   <!----- third Card Item ------->
+
   <div class="container my-5">
     <div class="header my-5">
       <h6>Best Sell</h6>
@@ -1115,6 +1124,7 @@
   <!-----End third  Card Item ------->
 
   <!-----Top Brand section------->
+
   <div class="container my-5">
     <div class="header my-5">
       <h3>Top Brand</h3>
@@ -1171,6 +1181,7 @@
   <!-----End Top Brand section ------->
 
   <!----Footer ------->
+
   <div class="footer">
     <div class="container">
       <div class="row">
@@ -1242,6 +1253,7 @@
       <a href="javascript:void(0)">© 2026 WAQEYA | Developed By Service Key.</a>
     </div>
   </div>
+
   <!-----End Footer------->
 
 
