--- a/navbar.html
+++ b/navbar.html
@@ -47,15 +47,12 @@
             />
           </a>
 
-          <div class="d-flex">
-            <form class="d-flex me-2">
-              <input
-                class="form-control"
-                type="text"
-                placeholder="Search Here"
-              />
-            </form>
-          </div>
+        <div class="search-box">
+          <input type="text" class="from-control" placeholder="Search Here">
+          <button class="search-btn">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </button>
+        </div>
           <a href="#" class="text-white fs-4 me-3">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
           </a>
