--- a/index.html
+++ b/index.html
@@ -1187,7 +1187,7 @@
       <div class="row">
         <!-- <div class="col-md-4"> -->
         <div class="col-sm-6 col-md-6 col-lg-3 d-flex flex-column">
-          <img src="images/waqeya.webp" alt="" />
+          <img src="images/waqeya.webp" alt="" width="50%"/>
           <p>
             WAQEYA.COM একটি ট্রাস্টেড ও কোয়ালিটি-ফোকাস অনলাইন ওয়াচ এবং বিভিন্ন
             চাইনিজ ফ্যাশন গেজেট কিডস টয় বেবি কেয়ার আইটেম ইত্যাদি প্রোডাক্ট
