--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         
       </div>
       <div class="logo">
-        <a class="navbar-brandd-flex mx-auto p-3" href="javascript:void(0)">
+        <a class="navbar-brandd-flex ms-auto p-3" href="javascript:void(0)">
             <img src="images/waqeya.webp" alt="" class="img-fluid" style="height: 60px"/>
         </a>
       </div>
@@ -1203,9 +1203,9 @@
         <!-- <div class="col-md-3 f-two"> -->
         <div class="col-sm-6 col-md-6 col-lg-3 d-flex flex-column f-two">
           <h6 class="fw-bold">Contact Us</h6>
-          <p><i class="fa-solid fa-phone me-2"></i> 01326870225</p>
+          <p><i class="fa-solid fa-phone me-2"></i>01326870225</p>
           <p>
-            <i class="fa-solid fa-envelope me-2"></i> waqeyashop@gmail.com
+            <i class="fa-solid fa-envelope me-2"></i>waqeyashop@gmail.com
           </p>
           <p>
             <i class="fa-solid fa-location-dot me-2"></i>Mirpur -2 Dhaka,
