--- a/allproduct.html
+++ b/allproduct.html
@@ -87,7 +87,9 @@
       <!-----textbox----->
       <div class="col-md-3">
         <div class="div">
+             <button type="button" class="btn btn-danger btn-sm rounded my-3">Clear</button>
           <div class="div">
+          
             <label for="">Filter By Name:</label>
             <input type="text" class="col-form-label rounded" placeholder="Enter Product Name">
           </div><br>
@@ -155,8 +157,8 @@
                   <span class="text-success">850 Tk</span>
                   <span class="badge bg-dark">Save 149</span>
                 </p>
+                <a href="order.html" class="btn btn-order">অর্ডার করুন</a>
 
-                <button class="btn btn-order">অর্ডার করুন</button>
               </div>
             </div>
             <div class="product-card p-3" style="width: 15rem">
@@ -184,7 +186,7 @@
                   <span class="badge bg-dark">Save 149</span>
                 </p>
 
-                <button class="btn btn-order">অর্ডার করুন</button>
+                <a href="order.html" class="btn btn-order">অর্ডার করুন</a>
               </div>
             </div>
             <div class="product-card p-3" style="width: 15rem">
@@ -212,7 +214,7 @@
                   <span class="badge bg-dark">Save 149</span>
                 </p>
 
-                <button class="btn btn-order">অর্ডার করুন</button>
+                <a href="order.html" class="btn btn-order">অর্ডার করুন</a>
               </div>
             </div>
           </div>
@@ -243,7 +245,7 @@
                   <span class="badge bg-dark">Save 149</span>
                 </p>
 
-                <button class="btn btn-order">অর্ডার করুন</button>
+                <a href="order.html" class="btn btn-order">অর্ডার করুন</a>
               </div>
             </div>
             <div class="product-card p-3" style="width: 15rem">
@@ -271,7 +273,7 @@
                   <span class="badge bg-dark">Save 149</span>
                 </p>
 
-                <button class="btn btn-order">অর্ডার করুন</button>
+                <a href="order.html" class="btn btn-order">অর্ডার করুন</a>
               </div>
             </div>
             <div class="product-card p-3" style="width: 15rem">
@@ -299,7 +301,7 @@
                   <span class="badge bg-dark">Save 149</span>
                 </p>
 
-                <button class="btn btn-order">অর্ডার করুন</button>
+                <a href="order.html" class="btn btn-order">অর্ডার করুন</a>
               </div>
             </div>
 
@@ -331,7 +333,34 @@
                   <span class="badge bg-dark">Save 149</span>
                 </p>
 
-                <button class="btn btn-order">অর্ডার করুন</button>
+                <a href="order.html" class="btn btn-order">অর্ডার করুন</a>
+              </div>
+            </div>
+            <div class="product-card p-3" style="width: 15rem">
+              <!-- Badges -->
+              <div class="badge-discount">14% Off</div>
+              <div class="badge-code">CODE:217</div>
+
+              <img src="images/ca-one.webp" class="img-fluid rounded" alt="Hijab" />
+
+              <div class="rating d-flex justify-content-between">
+                <div class="rating mb-2">★ 0.0 / 5</div>
+                <div class="sold-count fw-bold mb-2">13 Sold</div>
+              </div>
+
+              <div class="mt-3">
+                <h6 class="fw-5">
+                  WAQEYA Noor Comfort Floral Soft Linen Hijab
+                </h6>
+
+                <p class="text-muted mb-1">SKU: Code 217</p>
+
+                <p class="price d-flex gap-3 mb-3">
+                  <span class="original">999 Tk</span>
+                  <span class="text-success">850 Tk</span>
+                  <span class="badge bg-dark">Save 149</span>
+                </p>
+                <a href="order.html" class="btn btn-order">অর্ডার করুন</a>
               </div>
             </div>
             <div class="product-card p-3" style="width: 15rem">
@@ -359,39 +388,11 @@
                   <span class="badge bg-dark">Save 149</span>
                 </p>
 
-                <button class="btn btn-order">অর্ডার করুন</button>
-              </div>
-            </div>
-            <div class="product-card p-3" style="width: 15rem">
-              <!-- Badges -->
-              <div class="badge-discount">14% Off</div>
-              <div class="badge-code">CODE:217</div>
-
-              <img src="images/ca-one.webp" class="img-fluid rounded" alt="Hijab" />
-
-              <div class="rating d-flex justify-content-between">
-                <div class="rating mb-2">★ 0.0 / 5</div>
-                <div class="sold-count fw-bold mb-2">13 Sold</div>
-              </div>
-
-              <div class="mt-3">
-                <h6 class="fw-5">
-                  WAQEYA Noor Comfort Floral Soft Linen Hijab
-                </h6>
-
-                <p class="text-muted mb-1">SKU: Code 217</p>
-
-                <p class="price d-flex gap-3 mb-3">
-                  <span class="original">999 Tk</span>
-                  <span class="text-success">850 Tk</span>
-                  <span class="badge bg-dark">Save 149</span>
-                </p>
-
-                <button class="btn btn-order">অর্ডার করুন</button>
+                <a href="order.html" class="btn btn-order">অর্ডার করুন</a>
               </div>
             </div>
           </div>
-         
+
         </div>
 
 
