product pagese added

--- a/about.html
+++ b/about.html
@@ -68,23 +68,9 @@
     <!------End Navbar ------->
 
 
- <div class="container my-5">
+ <div class="container text-center my-5" style="min-height: 60vh;">
     <div class="about my-5">
-        <div class="row">
-          
-            <div class="col-6 col-md-6">
-                <img src="images/download.svg" style="height: 200px; width: 400px;" alt="">
-            </div>
-            <div class="col-6 col-md-6">
-                 <h4>about us</h4>
-                <p class="fw-bold">We are a globally trusted web hosting provider dedicated to helping small businesses and developers establish their online presence. Our reliable hosting services help you build the website you want while we handle the optimizations behind the scenes.</p>
-                <ul class="fw-bold">
-                <li>Responsive Degine</li>
-                 <li>Clean Code</li>
-                 <li>Creative Idea</li>
-                 </ul>
-            </div>
-        </div>
+          <h5>No about content found.</h5>
     </div>
  </div>
 
