--- a/kidswatch.html
+++ b/kidswatch.html
@@ -166,25 +166,17 @@
 
         <div class="row">
           <div class="d-flex justify-content-between mb-3">
-            <button type="button" class="btn btn-secondary btn-sm rounded">Hijab And Nikab</button>
+            <button type="button" class="btn btn-secondary btn-sm rounded">Kid's Watch</button>
             <button type="button" class="btn btn-danger btn-sm rounded">Clear</button>
           </div>
           <div class="kids-img d-flex gap-3 mb-2">
           <div class="img mb-3">
-            <img src="images/ca-th.webp" class="rounded-circle" alt="" style="width: 100px; height: 100px;">
-            <p class="fw-bold">Hijab Nikab</p>
+            <img src="images/w-f.webp" class="rounded-circle" alt="" style="width: 100px; height: 100px;">
+            <p class="fw-bold">all kid's watch</p>
           </div>
           <div class="img mb-3">
-            <img src="images/swth.webp" class="rounded-circle" alt="" style="width: 100px; height: 100px;">
-            <p class="fw-bold">Hijab Nikab</p>
-          </div>
-          <div class="img mb-3">
-            <img src="images/swt.webp" class="rounded-circle" alt="" style="width: 100px; height: 100px;">
-            <p class="fw-bold">Hijab Nikab</p>
-          </div>
-          <div class="img mb-3">
-            <img src="images/ca-th.webp" class="rounded-circle" alt="" style="width: 100px; height: 100px;">
-            <p class="fw-bold">Hijab Nikab</p>
+            <img src="images/w-f.webp" class="rounded-circle" alt="" style="width: 100px; height: 100px;">
+            <p class="fw-bold">all kid's watch</p>
           </div>
           </div>
 
@@ -214,7 +206,7 @@
               </a> -->
 
               <!-- Product Image -->
-              <img src="images/swse.webp" class="img-fluid rounded" alt="Hijab">
+              <img src="images/w-f.webp" class="img-fluid rounded" alt="Hijab">
 
               <!-- Rating -->
               <div class="d-flex justify-content-between mt-2">
@@ -273,7 +265,7 @@
               </a> -->
 
               <!-- Product Image -->
-              <img src="images/swth.webp" class="img-fluid rounded" alt="Hijab">
+              <img src="images/w-f.webp" class="img-fluid rounded" alt="Hijab">
 
               <!-- Rating -->
               <div class="d-flex justify-content-between mt-2">
