--- a/allproduct.html
+++ b/allproduct.html
@@ -185,7 +185,7 @@
         </div>
         <div class="form-check">
           <label class="form-check-label mb-3" for="womenfashion">
-            <a href="plazokhimar.html" class="form-check-label">Plazo Khimar Set</a>
+            <a href="kidswatch.html" class="form-check-label">Kid's Watch</a>
           </label>
           <input class="form-check-input" type="checkbox">
 
@@ -725,31 +725,41 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="images/ca-one.webp" class="img-fluid rounded" alt="Hijab">
+                    <img src="images/ca-one.webp" class="img-fluid rounded" alt="Hijab"
+                      style="width: 500px; height: 500px;">
                   </div>
                   <div class="col-md-6">
                     <p class="fw-bold">WAQEYA Noor Comfort Floral Soft Linen Hijab</p>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked p-1"></span>
-                    <span class="bg-danger rounded p-1">12 Sold</span>
+                    <span class="bg-info rounded p-1">12 Sold</span>
                     <div class="text">
                       <p>Category:</p>
-                      <p>Brand : Naviforce</p>
-                      <p>Sku CODE : 007</p>
+                      <p>Brand : <strong>Naviforce</strong></p>
+                      <p>Sku CODE : <strong> 007</strong></p>
                       <div class="te g-2 mb-2">
-                        <span class="text-muted text-decoration-line-through p-1">999 Tk</span>
+                        <span class="text-danger text-decoration-line-through p-1">999 Tk</span>
                         <span class="fw-bold p-1">850 Tk</span>
                         <span><button class="bg-dark text-light rounded p-2">Save 149</button></span>
                       </div>
-                      <div class="d-flex gap-2 p-3 mt-2">
-                        <span>
-                          <button type="button" class="btn btn-primary btn-sm">Add Cart</button>
-                        </span>
-                        <span><button type="button" class="btn btn-success btn-sm">Order Now</button>
-                        </span>
+                      <div class="te g-2 mb-2">
+                        <label for="" class="form-label fw-bold">Stock Status:</label>
+                        <div class="input-group">
+                          <button type="button" class="" id="btnPlus">+</button>
+                          <input type="text" class="from-control text-center" id="qty" value="1">
+                          <button type="button" class="" id="btnMinus">-</button>
+                        </div>
+                      </div>
+                      <div class="d-flex justify-content-between gap-2 p-3 mt-2">
+                        <button type="button" class="btn btn-outline-dark">কাটে যোগ করুন</button>
+                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#orderModal1">অর্ডার করুন</button>
+                      </div>
+                      <div class="d-flex justify-content-between rounded-circle gap-2 p-3 mt-2">
+                        <textarea name="" id="" class="from-control p-2" placeholder="Description Here..........."></textarea>
                       </div>
                     </div>
+
                   </div>
                 </div>
 
@@ -960,9 +970,25 @@
       </div>
       <!-----End Footer------->
 
-      <script>
 
+      <script>
+        const minusBtn = document.getElementById("btnMinus");
+        const plusBtn = document.getElementById("btnPlus");
+        const qtyInput = document.getElementById("qty");
+
+        minusBtn.addEventListener("click", () => {
+          let current = parseInt(qtyInput.value);
+          if (current > 1) {
+            qtyInput.value = current - 1;
+          }
+        });
+
+        plusBtn.addEventListener("click", () => {
+          let current = parseInt(qtyInput.value);
+          qtyInput.value = current + 1;
+        });
       </script>
+
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
