--- a/manfashion.html
+++ b/manfashion.html
@@ -1,1 +1,489 @@
-<h2>Man Fashion</h2>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+
+  <link rel="stylesheet" href="style.css" />
+  <title>All Product Us</title>
+</head>
+
+<body>
+
+  <!------Topbar ------->
+  <div class="topbar topbar-one">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-8 my-3">
+          <div class="marquee">
+            <p>"WAQEYA.COM – ওয়াচ, হিজাব, খিমার ও পালাজো ৩ পিস সেট. চাইনিজ ফ্যাশন গেজেট, কিডস টয় ও বেবি কেয়ার আইটেমের
+              বিশ্বস্ত অনলাইন স্টোর | No Advance ❌ | Cash on Delivery ✅"</p>
+          </div>
+        </div>
+        <div class="col-md-4 my-3 d-none d-md-block d-md-flex justify-content-center align-item-center">
+          <ul class="contact-list d-block">
+            <i class="fa-brands fa-whatsapp"></i> 01326870225
+            |
+            <i class="fa-solid fa-phone"></i> 01326870225
+
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!------End Topbar  ------->
+  <!------Navbar ------->
+  <nav class="navbar navbar-expand-xl navbar-dark bg-success">
+
+    <div class="container">
+      <!------humburger Button-->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!------humburger Button-->
+      <div class="collapse navbar-collapse" id="mynavbar">
+        <ul class="navbar-nav fs-5 mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Allproduct
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="nav-link" href="allproduct.html">Our product</a></li>
+              <li><a class="nav-link" href="#">Womens Fashion's</a></li>
+              <li><a class="nav-link" href="#">Mens Fashion's</a></li>
+              <li><a class="nav-link" href="#">Kids Watch</a></li>
+              <li><a class="nav-link" href="#">Womens Fragence</a></li>
+              <li><a class="nav-link" href="#">Mens Fashion's</a></li>
+            </ul>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="allproduct.html">All Product</a>
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="blog.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contactus.html">Contact</a>
+          </li>
+        </ul>
+
+      </div>
+      <div class="logo">
+        <a class="navbar-brandd-flex ms-auto p-3" href="javascript:void(0)">
+          <img src="images/waqeya.webp" alt="" class="img-fluid" style="height: 60px" />
+        </a>
+      </div>
+      <div class="search-box me-3">
+        <input type="text" class="from-control" placeholder="Search Here">
+        <button class="search-btn">
+          <i class="fa fa-search" aria-hidden="true"></i>
+        </button>
+      </div>
+      <!-- <form class="d-flex" ms-auto role="search">
+          <input class="form-control me-2" type="search" placeholder="Search Here" aria-label="Search" />
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form> -->
+      <a href="shopingcart.html" class="text-white fs-4 me-3">
+        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+      </a>
+      <a href="#" class="text-white fs-4">
+        <i class="fa-solid fa-circle-user"></i>
+      </a>
+    </div>
+    </div>
+  </nav>
+  <!------End Navbar ------->
+
+
+  <!-- Filter by Name -->
+
+  <!----- Our All Product------->
+  <!----- third Card Item ------->
+  <div class="container my-4">
+    <div class="row">
+      <!-----textbox----->
+      <div class="col-md-2 bg-body-secondary">
+
+        <div class="mb-3">
+          <label for="filterName" class="form-label fw-bold p-2 me-2">Filter By Name</label>
+          <button class="btn btn-danger btn-sm">Clear</button>
+          <div class="input-group">
+            <input type="text" class="from-control rounded" placeholder="Enter Product Name">
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="" class="from-control fw-bold">Filter By Price</label>
+          <div class="row g-2">
+            <div class="col">
+              <input type="number" class="from-control rounded" placeholder="Min - 0 Tk">
+            </div>
+            <div class="col">
+              <input type="number" class="from-control rounded" placeholder="Max - 2800 Tk">
+            </div>
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="" class="from-control fw-bold">Price Sorting</label>
+          <select class="form-select" id="">
+            <option selected>Default</option>
+            <option value="">Low to High</option>
+            <option value="">High to Low</option>
+          </select>
+        </div>
+
+        <!-- <div class="mb-3">
+    <label for="categorySearch" class="form-label">Filter By Category</label>
+    <input type="text" id="categorySearch" class="form-control mb-2" placeholder="Search category...">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="torchLight">
+      <label class="form-check-label" for="torchLight">Torch Light (2)</label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="womenFashion">
+      <label class="form-check-label" for="womenFashion">Women Fashion (101)</label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="manFashion">
+      <label class="form-check-label" for="manFashion">Man Fashion (0)</label>
+    </div>
+  </div>
+</div> -->
+        <div class="mb-3">
+          <label for="" class="form-label fw-bold">Filter By Category</label>
+          <input type="text" class="from-control rounded" placeholder="Search Category....">
+        </div>
+
+
+
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="torchLight">
+          <label class="form-check-label" for="torchLight">
+            <a href="torchlight.html" class="form-check-label">Torch Light</a>
+          </label>
+        </div>
+
+      </div>
+
+      <!-----textbox----->
+
+      <!-----card----->
+      <div class="col-md-10 mb-2">
+
+        <div class="row justify-content-center">
+          <div class="d-flex justify-content-between mb-3">
+            <button type="button" class="btn btn-secondary btn-sm rounded">Man's Fashion</button>
+            <button type="button" class="btn btn-outline-success btn-sm rounded">Clear</button>
+          </div>
+         
+
+          <div class="col-md-4 d-flex flex-column justify-content-center align-items-center text-center">
+
+           <h4>No products found 😞</h4>
+           <h6>Try adjusting your filters or check back later!</h6>
+
+
+          </div>
+
+        </div>
+
+
+
+      </div>
+
+    </div>
+  </div>
+  </div>
+  <!-----End third  Card Item ------->
+  <!----- Our All Product------->
+  <!--view icon Modal -->
+  <div class="modal fade" id="viewModal1" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Product View</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <img src="images/ca-one.webp" class="img-fluid rounded" alt="Hijab"
+                  style="width: 500px; height: 500px;">
+              </div>
+              <div class="col-md-6">
+                <p class="fw-bold">WAQEYA Noor Comfort Floral Soft Linen Hijab</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked p-1"></span>
+                <span class="bg-info rounded p-1">12 Sold</span>
+                <div class="text">
+                  <p>Category:</p>
+                  <p>Brand : <strong>Naviforce</strong></p>
+                  <p>Sku CODE : <strong> 007</strong></p>
+                  <div class="te g-2 mb-2">
+                    <span class="text-danger text-decoration-line-through p-1">999 Tk</span>
+                    <span class="fw-bold p-1">850 Tk</span>
+                    <span><button class="bg-dark text-light rounded p-2">Save 149</button></span>
+                  </div>
+                  <div class="te g-2 mb-2">
+                    <label for="" class="form-label fw-bold">Stock Status:</label>
+                    <div class="input-group">
+                      <button type="button" class="" id="btnPlus">+</button>
+                      <input type="text" class="from-control text-center" id="qty" value="1">
+                      <button type="button" class="" id="btnMinus">-</button>
+                    </div>
+                  </div>
+                  <div class="d-flex justify-content-between gap-2 p-3 mt-2">
+                    <button type="button" class="btn btn-outline-dark">কাটে যোগ করুন</button>
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                      data-bs-target="#orderModal1">অর্ডার করুন</button>
+                  </div>
+                  <div class="d-flex justify-content-between rounded-circle gap-2 p-3 mt-2">
+                    <textarea name="" id="" class="from-control p-2"
+                      placeholder="Description Here..........."></textarea>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--view icon Modal -->
+  <!--button Modal -->
+  <div class="modal fade" id="orderModal1" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <!--Modal Body -->
+
+        <div class="modal-body">
+          <div class="checkout-container">
+
+            <div class="checkout-header">
+              <h6 class="bg-dark text-light p-2">অর্ডার করতে চাইলে আপনার নাম,মোবাইল,ঠিকানা দিয়ে অর্ডার কনফার্ম
+                বাটনে
+                ক্লিক করুন।।</h6>
+            </div>
+            <div class="customer-form">
+              <div class="form-group">
+
+                <div class="position-relative mb-2">
+                  <span class="position-absolute top-50 start-0 translate-middle-y ms-2">👤</span>
+                  <input type="text" class="form-control ps-5" placeholder="আপনার নাম লিখুন.....">
+                </div>
+                <div class="position-relative mb-2">
+                  <span class="position-absolute top-50 start-0 translate-middle-y ms-2">📞</span>
+                  <input type="text" class="form-control ps-5" placeholder="এখানে মোবাইল নম্বর লিখুন.....">
+                </div>
+                <div class="position-relative mb-2">
+                  <span class="position-absolute top-50 start-0 translate-middle-y ms-2"></span>
+                  <textarea class="form-control" placeholder="সম্পূর্ণ ঠিকানা লিখুন (থানা ও জেলা সহ)"></textarea>
+                </div>
+              </div>
+            </div>
+            <!--form -->
+
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>IMAGE</th>
+                  <th>PRODUCT INFORMATION</th>
+                  <th>DELETE</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><img src="images/ca-one.webp" style="width: 50px;" alt=""></td>
+                  <td>
+                    <p>Soft Lion Hijab</p>
+                    <span class="text-success">(16000.00 TK)</span><br><br>
+                    <button type="button" class="bg-dark text-light">+</button>
+                    <span>1</span>
+                    <button type="button" class="bg-dark text-light">-</button>
+
+                  </td>
+                  <td>
+                    <button type="button" class="btn btn-danger btn-sm text-center">DELETE</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><img src="images/ca-one.webp" style="width: 50px;" alt=""></td>
+                  <td>
+                    <p>লাক্সারি আবায়া সেট (নিকাবসহ)</p>
+                    <span class="text-success">(19000.00 TK)</span><br><br>
+                    <button type="button" class="bg-dark text-light">+</button>
+                    <span>1</span>
+                    <button type="button" class="bg-dark text-light">-</button>
+
+                  </td>
+                  <td>
+                    <button type="button" class="btn btn-danger btn-sm text-center">DELETE</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><img src="images/ca-one.webp" style="width: 50px;" alt=""></td>
+                  <td>
+                    <p>Bloom Printkari 100% Cotton</p>
+                    <span class="text-success">(10000.00 TK)</span><br><br>
+                    <button type="button" class="bg-dark text-light">+</button>
+                    <span>1</span>
+                    <button type="button" class="bg-dark text-light">-</button>
+
+                  </td>
+                  <td>
+                    <button type="button" class="btn btn-danger btn-sm text-center">DELETE</button>
+                  </td>
+                </tr>
+
+              </tbody>
+            </table>
+
+            <!--form -->
+
+
+          </div>
+        </div>
+
+        <!--Modal Body -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            বন্ধ করুন
+          </button>
+
+          <button type="button" class="btn btn-success">
+            Confirm Order
+          </button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!--button Modal -->
+
+
+
+  <!-----End Top Brand section ------->
+
+  <!----Footer ------->
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <img src="images/waqeya.webp" alt="" />
+          <p>
+            WAQEYA.COM একটি ট্রাস্টেড ও কোয়ালিটি-ফোকাস অনলাইন ওয়াচ এবং বিভিন্ন
+            চাইনিজ ফ্যাশন গেজেট কিডস টয় বেবি কেয়ার আইটেম ইত্যাদি প্রোডাক্ট
+            স্টোর। আমাদের কাছ থেকে কেনাকাটা করার আগে নিচের নীতিমালাগুলো
+            ভালোভাবে পড়ে নিন।
+          </p>
+          <div class="icon text-success d-flex gap-3">
+            <a href="javascript:void(0)"><i class="fa-brands fa-facebook fs-4"></i></a>
+            <a href="javascript:void(0)"><i class="fa-solid fa-message fs-4"></i></a>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <h6 class="fw-bold">Contact Us</h6>
+          <p><i class="fa-solid fa-phone me-2"></i> 01326870225</p>
+          <p>
+            <i class="fa-solid fa-envelope me-2"></i> waqeyashop@gmail.com
+          </p>
+          <p>
+            <i class="fa-solid fa-location-dot me-2"></i> Mirpur -2 Dhaka,
+            Bangladesh
+          </p>
+          <p>
+            <i class="fa-brands fa-whatsapp text-success me-2"></i> WhatsApp
+            Us
+          </p>
+        </div>
+
+        <div class="col-md-3">
+          <h6 class="fw-bold">Quick Links</h6>
+          <button class="btn btn-dark">Order Tracking</button>
+          <div class="link">
+            <p><a href="#"></a>Shipping Policy</p>
+            <p><a href="#"></a>Returns & Refunds Policy</p>
+            <p><a href="#"></a>Warranty Policy</p>
+            <p><a href="#"></a>Order Policy</p>
+            <p><a href="#"></a>Our Mission</p>
+            <p><a href="#"></a>Our Vision</p>
+            <p><a href="#"></a>Privacy & Policy</p>
+            <p><a href="#"></a>Terms & Conditions</p>
+          </div>
+
+          <!-- <ul>
+              <li><a href="#"></a>Shipping Policy</li>
+              <li><a href="#"></a>Returns & Refunds Policy</li>
+              <li><a href="#"></a>Warranty Policy</li>
+              <li><a href="#"></a>Order Policy</li>
+              <li><a href="#"></a>Our Mission</li>
+              <li><a href="#"></a>Our Vision</li>
+              <li><a href="#"></a>Privacy & Policy</li>
+              <li><a href="#"></a>Terms & Conditions</li>
+            </ul> -->
+        </div>
+
+        <div class="col-md-2">
+          <h6 class="fw-bold">Let's Connect</h6>
+          <a href="#" class="btn btn-dark">Join Our Facebook</a>
+          <div class="mt-3">
+            <div>
+              <img src="images/imgw.jpg" alt="" />
+
+              <p>WAQEYA</p>
+            </div>
+            <a href="#" class="btn btn-outline-success"><i class="fa-brands fa-facebook"></i>Follow Page</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="text-bg-dark text-center fs-6">
+      <a href="javascript:void(0)">© 2026 WAQEYA | Developed By Service Key.</a>
+    </div>
+  </div>
+  <!-----End Footer------->
+
+  <script>
+    const minusBtn = document.getElementById("btnMinus");
+    const plusBtn = document.getElementById("btnPlus");
+    const qtyInput = document.getElementById("qty");
+
+    minusBtn.addEventListener("click", () => {
+      let current = parseInt(qtyInput.value);
+      if (current > 1) {
+        qtyInput.value = current - 1;
+      }
+    });
+
+    plusBtn.addEventListener("click", () => {
+      let current = parseInt(qtyInput.value);
+      qtyInput.value = current + 1;
+    });
+  </script>
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
