--- a/torchlight.html
+++ b/torchlight.html
@@ -181,20 +181,320 @@
       <div class="col-md-10 mb-2">
 
         <div class="row">
-          <div class="div">
-            <button type="button" class="btn btn-success btn-sm rounded">All Product</button>
+          <div class="d-flex justify-content-between mb-3">
+            <button type="button" class="btn btn-secondary btn-sm rounded">Torch Light</button>
+            <button type="button" class="btn btn-danger btn-sm rounded">Clear</button>
+          </div>
+          <div class="img mb-3">
+            <img src="images/swf (2).webp" class="rounded-circle" alt="" style="width: 100px; height: 100px;">
+            <p class="fw-bold">Torch Light</p>
           </div>
 
-          
+          <div class="col-md-4 d-flex">
 
+            <div class="product-card position-relative p-3 my-3" style="width: 20rem;">
+
+              <!-- Discount Badge -->
+              <div class="badge bg-danger position-absolute top-0 end-0 m-2">
+                14% Off
+              </div>
+
+              <!-- Eye Icon -->
+              <!-- <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#viewModal1">
+                <i class="fa fa-eye"></i>
+              </a> -->
+              <button
+                class="eye-icon position-absolute top-0 start-0 translate-middle-y bg-info rounded-circle p-2 m-3 shadow"
+                data-bs-toggle="modal" data-bs-target="#viewModal1">
+                <i class="fa fa-eye"></i>
+              </button>
+
+
+              <!-- <a href="viewproduct.html"
+                class="eye-icon position-absolute top-0 start-0 translate-middle-y bg-white rounded-circle p-2 m-3 shadow">
+                <i class="fa fa-eye"></i>
+              </a> -->
+
+              <!-- Product Image -->
+              <img src="images/swf (2).webp" class="img-fluid rounded" alt="Hijab">
+
+              <!-- Rating -->
+              <div class="d-flex justify-content-between mt-2">
+                <small>★ 0.0 / 5</small>
+                <small class="fw-bold">13 Sold</small>
+              </div>
+
+              <!-- Product Info -->
+              <div class="mt-3">
+                <h6 class="fw-bold">
+                  WAQEYA Noor Comfort Floral Soft Linen Hijab
+                </h6>
+
+                <p class="text-muted mb-1">SKU: Code 217</p>
+
+                <div class="d-flex gap-2 mb-3">
+                  <span class="text-decoration-line-through text-muted">999 Tk</span>
+                  <span class="text-success fw-bold">850 Tk</span>
+                  <span class="badge bg-dark p-2">Save 149</span>
+                </div>
+                <!-- 
+                <button class="btn btn-success order-btn" data-bs-toggle="modal" data-bs-target="#orderModal"
+                  data-product="WAQEYA Noor Comfort Floral Soft Linen Hijab" data-price="850 Tk">
+                  অর্ডার করুন
+                </button> -->
+
+                <!-- Order Button -->
+                <button class="btn btn-success w-100" data-bs-toggle="modal" data-bs-target="#orderModal1">
+
+                  অর্ডার করুন
+
+                </button>
+              </div>
+            </div>
+            <div class="product-card position-relative p-3 my-3" style="width: 20rem;">
+
+              <!-- Discount Badge -->
+              <div class="badge bg-danger position-absolute top-0 end-0 m-2">
+                14% Off
+              </div>
+
+              <!-- Eye Icon -->
+              <!-- <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#viewModal1">
+                <i class="fa fa-eye"></i>
+              </a> -->
+              <button
+                class="eye-icon position-absolute top-0 start-0 translate-middle-y bg-info rounded-circle p-2 m-3 shadow"
+                data-bs-toggle="modal" data-bs-target="#viewModal1">
+                <i class="fa fa-eye"></i>
+              </button>
+
+
+              <!-- <a href="viewproduct.html"
+                class="eye-icon position-absolute top-0 start-0 translate-middle-y bg-white rounded-circle p-2 m-3 shadow">
+                <i class="fa fa-eye"></i>
+              </a> -->
+
+              <!-- Product Image -->
+              <img src="images/swf (2).webp" class="img-fluid rounded" alt="Hijab">
+
+              <!-- Rating -->
+              <div class="d-flex justify-content-between mt-2">
+                <small>★ 0.0 / 5</small>
+                <small class="fw-bold">13 Sold</small>
+              </div>
+
+              <!-- Product Info -->
+              <div class="mt-3">
+                <h6 class="fw-bold">
+                  WAQEYA Noor Comfort Floral Soft Linen Hijab
+                </h6>
+
+                <p class="text-muted mb-1">SKU: Code 217</p>
+
+                <div class="d-flex gap-2 mb-3">
+                  <span class="text-decoration-line-through text-muted">999 Tk</span>
+                  <span class="text-success fw-bold">850 Tk</span>
+                  <span class="badge bg-dark p-2">Save 149</span>
+                </div>
+                <!-- 
+                <button class="btn btn-success order-btn" data-bs-toggle="modal" data-bs-target="#orderModal"
+                  data-product="WAQEYA Noor Comfort Floral Soft Linen Hijab" data-price="850 Tk">
+                  অর্ডার করুন
+                </button> -->
+
+                <!-- Order Button -->
+                <button class="btn btn-success w-100" data-bs-toggle="modal" data-bs-target="#orderModal1">
+
+                  অর্ডার করুন
+
+                </button>
+              </div>
+            </div>
+
+
+          </div>
+
+        </div>
+
+
+
+      </div>
+
+    </div>
+  </div>
+  </div>
+  <!-----End third  Card Item ------->
+  <!----- Our All Product------->
+  <!--view icon Modal -->
+  <div class="modal fade" id="viewModal1" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Product View</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <img src="images/ca-one.webp" class="img-fluid rounded" alt="Hijab"
+                  style="width: 500px; height: 500px;">
+              </div>
+              <div class="col-md-6">
+                <p class="fw-bold">WAQEYA Noor Comfort Floral Soft Linen Hijab</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked p-1"></span>
+                <span class="bg-info rounded p-1">12 Sold</span>
+                <div class="text">
+                  <p>Category:</p>
+                  <p>Brand : <strong>Naviforce</strong></p>
+                  <p>Sku CODE : <strong> 007</strong></p>
+                  <div class="te g-2 mb-2">
+                    <span class="text-danger text-decoration-line-through p-1">999 Tk</span>
+                    <span class="fw-bold p-1">850 Tk</span>
+                    <span><button class="bg-dark text-light rounded p-2">Save 149</button></span>
+                  </div>
+                  <div class="te g-2 mb-2">
+                    <label for="" class="form-label fw-bold">Stock Status:</label>
+                    <div class="input-group">
+                      <button type="button" class="" id="btnPlus">+</button>
+                      <input type="text" class="from-control text-center" id="qty" value="1">
+                      <button type="button" class="" id="btnMinus">-</button>
+                    </div>
+                  </div>
+                  <div class="d-flex justify-content-between gap-2 p-3 mt-2">
+                    <button type="button" class="btn btn-outline-dark">কাটে যোগ করুন</button>
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                      data-bs-target="#orderModal1">অর্ডার করুন</button>
+                  </div>
+                  <div class="d-flex justify-content-between rounded-circle gap-2 p-3 mt-2">
+                    <textarea name="" id="" class="from-control p-2"
+                      placeholder="Description Here..........."></textarea>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--view icon Modal -->
+  <!--button Modal -->
+  <div class="modal fade" id="orderModal1" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <!--Modal Body -->
+
+        <div class="modal-body">
+          <div class="checkout-container">
+
+            <div class="checkout-header">
+              <h6 class="bg-dark text-light p-2">অর্ডার করতে চাইলে আপনার নাম,মোবাইল,ঠিকানা দিয়ে অর্ডার কনফার্ম
+                বাটনে
+                ক্লিক করুন।।</h6>
+            </div>
+            <div class="customer-form">
+              <div class="form-group">
+
+                <div class="position-relative mb-2">
+                  <span class="position-absolute top-50 start-0 translate-middle-y ms-2">👤</span>
+                  <input type="text" class="form-control ps-5" placeholder="আপনার নাম লিখুন.....">
+                </div>
+                <div class="position-relative mb-2">
+                  <span class="position-absolute top-50 start-0 translate-middle-y ms-2">📞</span>
+                  <input type="text" class="form-control ps-5" placeholder="এখানে মোবাইল নম্বর লিখুন.....">
+                </div>
+                <div class="position-relative mb-2">
+                  <span class="position-absolute top-50 start-0 translate-middle-y ms-2"></span>
+                  <textarea class="form-control" placeholder="সম্পূর্ণ ঠিকানা লিখুন (থানা ও জেলা সহ)"></textarea>
+                </div>
+              </div>
+            </div>
+            <!--form -->
+
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>IMAGE</th>
+                  <th>PRODUCT INFORMATION</th>
+                  <th>DELETE</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><img src="images/ca-one.webp" style="width: 50px;" alt=""></td>
+                  <td>
+                    <p>Soft Lion Hijab</p>
+                    <span class="text-success">(16000.00 TK)</span><br><br>
+                    <button type="button" class="bg-dark text-light">+</button>
+                    <span>1</span>
+                    <button type="button" class="bg-dark text-light">-</button>
+
+                  </td>
+                  <td>
+                    <button type="button" class="btn btn-danger btn-sm text-center">DELETE</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><img src="images/ca-one.webp" style="width: 50px;" alt=""></td>
+                  <td>
+                    <p>লাক্সারি আবায়া সেট (নিকাবসহ)</p>
+                    <span class="text-success">(19000.00 TK)</span><br><br>
+                    <button type="button" class="bg-dark text-light">+</button>
+                    <span>1</span>
+                    <button type="button" class="bg-dark text-light">-</button>
+
+                  </td>
+                  <td>
+                    <button type="button" class="btn btn-danger btn-sm text-center">DELETE</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><img src="images/ca-one.webp" style="width: 50px;" alt=""></td>
+                  <td>
+                    <p>Bloom Printkari 100% Cotton</p>
+                    <span class="text-success">(10000.00 TK)</span><br><br>
+                    <button type="button" class="bg-dark text-light">+</button>
+                    <span>1</span>
+                    <button type="button" class="bg-dark text-light">-</button>
+
+                  </td>
+                  <td>
+                    <button type="button" class="btn btn-danger btn-sm text-center">DELETE</button>
+                  </td>
+                </tr>
+
+              </tbody>
+            </table>
+
+            <!--form -->
+
+
+          </div>
+        </div>
+
+        <!--Modal Body -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            বন্ধ করুন
+          </button>
+
+          <button type="button" class="btn btn-success">
+            Confirm Order
+          </button>
         </div>
 
       </div>
     </div>
   </div>
-  <!-----End third  Card Item ------->
-  <!----- Our All Product------->
-
+  <!--button Modal -->
 
 
 
@@ -281,7 +581,23 @@
   </div>
   <!-----End Footer------->
 
+  <script>
+    const minusBtn = document.getElementById("btnMinus");
+    const plusBtn = document.getElementById("btnPlus");
+    const qtyInput = document.getElementById("qty");
 
+    minusBtn.addEventListener("click", () => {
+      let current = parseInt(qtyInput.value);
+      if (current > 1) {
+        qtyInput.value = current - 1;
+      }
+    });
+
+    plusBtn.addEventListener("click", () => {
+      let current = parseInt(qtyInput.value);
+      qtyInput.value = current + 1;
+    });
+  </script>
 
 
 
