--- a/allproduct.html
+++ b/allproduct.html
@@ -79,7 +79,7 @@
       </div>
       <div class="logo">
         <a class="navbar-brandd-flex ms-auto p-3" href="javascript:void(0)">
-          <img src="images/waqeya.webp" alt="" class="img-fluid" style="height: 60px" />
+          <img src="images/waqeya.webp" alt="" class="img-fluid" style="height: 40px" />
         </a>
       </div>
       <div class="search-box me-3">
@@ -753,10 +753,12 @@
                       </div>
                       <div class="d-flex justify-content-between gap-2 p-3 mt-2">
                         <button type="button" class="btn btn-outline-dark">কাটে যোগ করুন</button>
-                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#orderModal1">অর্ডার করুন</button>
+                        <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                          data-bs-target="#orderModal1">অর্ডার করুন</button>
                       </div>
                       <div class="d-flex justify-content-between rounded-circle gap-2 p-3 mt-2">
-                        <textarea name="" id="" class="from-control p-2" placeholder="Description Here..........."></textarea>
+                        <textarea name="" id="" class="from-control p-2"
+                          placeholder="Description Here..........."></textarea>
                       </div>
                     </div>
 
@@ -769,8 +771,8 @@
           </div>
         </div>
       </div>
-
       <!--view icon Modal -->
+
       <!--button Modal -->
       <div class="modal fade" id="orderModal1" tabindex="-1">
         <div class="modal-dialog">
@@ -861,7 +863,26 @@
                 </table>
 
                 <!--form -->
+               <span class="fw-bold">Delivery Charge</span>
+                
+                <div class="position-relative mb-2">
 
+                  <input class="form-check-input position-absolute top-50 start-0 translate-middle-y ms-2" type="radio">
+
+                 <label for="insideDhaka" class="w-100">
+                 <textarea class="form-control ps-5" placeholder="ঢাকা সিটির বাহিরে হোম ডেলিভারি চার্জ ১৩০ টাকা"></textarea>
+                  </label>
+
+                </div>
+                <div class="position-relative mb-2">
+
+                  <input class="form-check-input position-absolute top-50 start-0 translate-middle-y ms-2" type="radio">
+
+                 <label for="insideDhaka" class="w-100">
+                 <textarea class="form-control ps-5" placeholder="ঢাকা সিটির ভিতরে হোম ডেলিভারি চার্জ ৬০ টাকা"></textarea>
+                  </label>
+
+                </div>
 
               </div>
             </div>
