--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </div>
   <!------End Topbar  ------->
-  
+
   <!------Navbar ------->
 
   <nav class="navbar navbar-expand-xl navbar-dark bg-success">
@@ -81,33 +81,34 @@
             <a class="nav-link" href="contactus.html">Contact</a>
           </li>
         </ul>
-        
+
       </div>
       <div class="logo">
-        <a class="navbar-brandd-flex ms-auto p-3" href="javascript:void(0)">
-            <img src="images/waqeya.webp" alt="" class="img-fluid" style="height: 60px"/>
+        <a class="navbar-brand ms-4 p-9" href="javascript:void(0)">
+          <img src="images/waqeya.webp" alt="" class="img-fluid" style="height: 40px" />
         </a>
       </div>
+
+
       <div class="search-box me-3">
-          <input type="text" class="from-control" placeholder="Search Here">
-          <button class="search-btn">
-            <i class="fa fa-search" aria-hidden="true"></i>
-          </button>
-        </div>
-       <!-- <form class="d-flex" ms-auto role="search">
+        <input type="text" class="from-control" placeholder="Search Here">
+        <button class="search-btn">
+          <i class="fa fa-search" aria-hidden="true"></i>
+        </button>
+      </div>
+      <!-- <form class="d-flex" ms-auto role="search">
           <input class="form-control me-2" type="search" placeholder="Search Here" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form> -->
-        <a href="shopingcart.html" class="text-white fs-4 me-3">
-          <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-        </a>
-        <a href="#" class="text-white fs-4">
-          <i class="fa-solid fa-circle-user"></i>
-        </a>
+      <a href="shopingcart.html" class="text-white fs-4 me-3">
+        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+      </a>
+      <a href="#" class="text-white fs-4">
+        <i class="fa-solid fa-circle-user"></i>
+      </a>
     </div>
     </div>
   </nav>
-  
   <!------End Navbar ------->
 
   <!-----Carousel ------->
@@ -1183,7 +1184,7 @@
       <div class="row">
         <!-- <div class="col-md-4"> -->
         <div class="col-sm-6 col-md-6 col-lg-3 d-flex flex-column">
-          <img src="images/waqeya.webp" alt="" width="50%"/>
+          <img src="images/waqeya.webp" alt="" width="50%" />
           <p>
             WAQEYA.COM একটি ট্রাস্টেড ও কোয়ালিটি-ফোকাস অনলাইন ওয়াচ এবং বিভিন্ন
             চাইনিজ ফ্যাশন গেজেট কিডস টয় বেবি কেয়ার আইটেম ইত্যাদি প্রোডাক্ট
