--- a/kidswatch.html
+++ b/kidswatch.html
@@ -79,7 +79,7 @@
       </div>
       <div class="logo">
         <a class="navbar-brandd-flex ms-auto p-3" href="javascript:void(0)">
-          <img src="images/waqeya.webp" alt="" class="img-fluid" style="height: 60px" />
+          <img src="images/waqeya.webp" alt="" class="img-fluid" style="height: 40px" />
         </a>
       </div>
       <div class="search-box me-3">
@@ -327,7 +327,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-6">
-                <img src="images/ca-one.webp" class="img-fluid rounded" alt="Hijab"
+                <img src="images/w-f.webp" class="img-fluid rounded" alt="Hijab"
                   style="width: 500px; height: 500px;">
               </div>
               <div class="col-md-6">
@@ -419,7 +419,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <td><img src="images/ca-one.webp" style="width: 50px;" alt=""></td>
+                  <td><img src="images/w-f.webp" style="width: 50px;" alt=""></td>
                   <td>
                     <p>Soft Lion Hijab</p>
                     <span class="text-success">(16000.00 TK)</span><br><br>
@@ -433,7 +433,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><img src="images/ca-one.webp" style="width: 50px;" alt=""></td>
+                  <td><img src="images/w-f.webp" style="width: 50px;" alt=""></td>
                   <td>
                     <p>লাক্সারি আবায়া সেট (নিকাবসহ)</p>
                     <span class="text-success">(19000.00 TK)</span><br><br>
@@ -447,7 +447,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><img src="images/ca-one.webp" style="width: 50px;" alt=""></td>
+                  <td><img src="images/w-f.webp" style="width: 50px;" alt=""></td>
                   <td>
                     <p>Bloom Printkari 100% Cotton</p>
                     <span class="text-success">(10000.00 TK)</span><br><br>
