--- a/shopingcart.html
+++ b/shopingcart.html
@@ -68,7 +68,7 @@
     <!------End Navbar ------->
 
 
- <div class="container my-5">
+ <div class="container my-5" style="min-height: 60vh;">
     <div class="shoping_cart my-5">
     <div class="row justify-content-center">
         <div class="col-6 text-center">
