--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!------Navbar ------->
 
-  <nav class="navbar navbar-expand-xl navbar-dark bg-success">
+  <nav class="navbar navbar-expand-xl navbar-dark bg-light">
 
     <div class="container">
       <!------humburger Button-->
@@ -100,10 +100,10 @@
           <input class="form-control me-2" type="search" placeholder="Search Here" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form> -->
-      <a href="shopingcart.html" class="text-white fs-4 me-3">
+      <a href="shopingcart.html" class="text-dark fs-4 me-3">
         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
       </a>
-      <a href="#" class="text-white fs-4">
+      <a href="#" class="text-dark fs-4">
         <i class="fa-solid fa-circle-user"></i>
       </a>
     </div>
