--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 
 <body>
   <!------Navbar ------->
-  <nav class="navbar navbar-expand-sm navbar-dark bg-success">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-light">
     <div class="container">
       <div class="collapse navbar-collapse" id="mynavbar">
         <ul class="navbar-nav fs-5 me-auto">
@@ -43,10 +43,10 @@
             <input class="form-control" type="text" placeholder="Search Here" />
           </form>
         </div>
-        <a href="#" class="text-white fs-4 me-3">
+        <a href="#" class="text-dark fs-4 me-3">
           <i class="fa fa-shopping-cart" aria-hidden="true"></i>
         </a>
-        <a href="#" class="text-white fs-4">
+        <a href="#" class="text-dark fs-4">
           <i class="fa-solid fa-circle-user"></i>
         </a>
       </div>
