--- a/contactus.html
+++ b/contactus.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="javascript:void(0)">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">All Product</a>
+              <a class="nav-link" href="javascript:void(0)">Product</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="javascript:void(0)">Blog</a>
