--- a/torchlight.html
+++ b/torchlight.html
@@ -51,7 +51,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Allproduct
+              Product
             </a>
             <ul class="dropdown-menu">
               <li><a class="nav-link" href="allproduct.html">Our product</a></li>
